@@ -1,6 +1,8 @@
 matchbox-window-manager-2 (0.2.70-1~unreleased) unstable; urgency=low
 
-  * foo
+  Kimmo:
+  * Plug memory leaks in mb_wm_client_window_sync_properties. Related to
+    NB#134230 and NB#98132.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 18 Sep 2009 10:01:56 +0300
 
